# Hydra

./: INSTALL  Makefile.am  README  configure.ac  teic.c
doc/: Makefile.am  hydratools.texi
include/: analysis.h  gcd_hash.h  runinfo.h  task.h
man/: Makefile.am  pseudosim.1  schedtests.1
models/: 12tasks4freqs2res-high-ord-u.txt  12tasks4freqs2res.txt  2tasks4freqs2res-high-ord.txt  3tasks1freqs3res-high.txt  3tasks1freqs3res-low.txt  3tasks3freqs3res-high-ord.txt  3tasks3freqs3res-high.txt  3tasks3freqs3res-low.txt  3tasks3freqs3res.txt  6tasks1freq2res.txt  6tasks4freqs2res.txt  le02-04.txt  modelgapaudsley02.txt  modelgapaudsley03.txt  modelromulo01.txt  modelsimfreqs.txt  modeltest.txt  task01.txt  task02.txt  task03.txt  task04.txt  task05.txt  task06.txt  task07.txt  task08.txt  utilization.ods
models/high-ord/: 12tasks4freqs2res-high-ord.txt  3tasks3freqs3res-high-ord.txt.dat.ok  6tasks4freqs2res-high-ord.txt  avaliacoes.plot  avaliation3.plot  avaliation6.plot  time12.plot  tudo.ods
models/schedtests/: le02-04.txt  model_solvers.txt  modeljoseph01.txt  modeljoseph02.txt  modelromulo02.txt  modeltest.txt
models/simulation_lp/: modelsimfreqs-1cluster.txt  modelsimfreqs-2cluster.txt  modelsimperiodrange.txt  modelsimranges.txt  solvers_config.txt
models/simulation_lp_energy/: modelsimranges.txt.rej
models/simulation_no_lp/: modelsimfreqs-1cluster.txt  modelsimranges.txt
models/simulation_no_lp_energy/: modelsimfreqs-1cluster.txt  modelsimfreqs-1cluster.txt.rej  modelsimfreqs-2cluster.txt  modelsimfreqs-2cluster.txt.rej  modelsimranges.txt.rej
models/simulation_sample/: ak_params.txt  modelsimranges.txt
scripts/: avaliation.plot  avaliation12.plot  collect_success.sh  create_bootstrap.sh  create_bootstrap_big.sh  create_bootstrap_rmresp.sh  create_bootstrap_rmutil.sh  evaluated.plot  gen-big.sh  gen_data.sh  plot_clustered_evaluated.sh  plot_clustered_time.sh  plot_evaluated.sh  plot_time.sh  process_data.sh  process_data2.sh  process_data_timing.sh  process_runs.sh  process_runs_big.sh  process_runs_rlx.sh  run-edf.sh  run-exact.sh  run-fixed.sh  run-ga-all-big.sh  run-ga-rmresp.sh  run-ga-rmutil.sh  run-ga.sh  run-gen.sh  run-input-rmresp.sh  run-input-rmutil.sh  run-input.sh  run-nolim-upto-reverse.sh  run-nolim-upto-start-tight.sh  run-nolim-upto-start.sh  run-nolim-upto.sh  run-relax.sh  run-tight-reverse.sh  run-tight.sh  run-upto.sh  run.pbs  (+4 more)
src/: Makefile.am  analysis.c  analysis.cpp  hydra_gen.cpp  hydra_solver.cpp  hydra_solver_n.cpp  pseudo-sim.c  pseudosim.cpp  schedulability.c  schedulability.cpp  smartenum.c  solver_mgap_edf.cpp  solver_mgap_edf_tight.cpp  solver_mgap_rm_enrico.cpp  solver_mgap_rm_exact.cpp
src/ga/: Makefile.am  fitnesscalc.cpp  fitnesscalc.h  fitnesscalcPGA.h  fitnesscalcpga.cpp  fitnesscalcpga_rmresp.cpp  fitnesscalcpga_rmutil.cpp  geneticalgorithm.cpp  geneticalgorithm.h  individuals.cpp  individuals.h  main.cpp  population.cpp  population.h  test.cpp
